# enterprise-ai-knowledge-hub

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: main.py
app/api/routes/: chat.py  documents.py  query.py
app/core/: config.py  exceptions.py  logging.py  tracing.py
app/guardrails/: __init__.py  service.py
app/guardrails/config/: config.yml
app/models/: chat.py  document.py  query.py
app/services/: __init__.py  cache_service.py  document_parser.py  embedding_service.py  llm_service.py  rag_service.py  vector_store.py
tests/: conftest.py  test_guardrails.py  test_llm_service.py  test_rag_service.py
